# xlerai-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/xlerai/: __init__.py  __main__.py
src/xlerai/xlerai/: __init__.py
